adding doc to service part1